--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <head>
   <title>Weather</title>
   <!-- require files here -->
+  <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/chart.js"></script>
+    <script src="js/weatherChart.js"></script>
+  <script src="js/init.js"></script>
 </head>
 <body>
   <canvas id="NYCWeatherChart" width="800" height="400"></canvas>
