--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <head>
   <title>Weather</title>
   <!-- require files here -->
+<script src="js/vendor/Chart.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
+<script src=js/weatherChart.js></script>
+  </script>
 </head>
 <body>
   <canvas id="NYCWeatherChart" width="800" height="400"></canvas>
