--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
   <title>Weather</title>
+  <script type="text/javascript" src='js/vendor/jquery-1.8.3.min.js' ></script>
+  <script type="text/javascript" src='js/vendor/Chart.min.js'></script>
+  <script type="text/javascript" src='js/weatherChart.js'></script>
+  <script type="text/javascript" src='js/init.js'></script>
   <!-- require files here -->
 </head>
 <body>
